# HrdwCCppCUDA

./: .gitignore  .gitmodules  README.md
Constructicon/LongHaul/Source/UnitTests/: CMakeLists.txt
Constructicon/Mixmaster/projects/program_setup/: Cargo.toml
Constructicon/Source/Performance/: BUILD  CMakeLists.txt
Constructicon/Source/Performance/CPrimer/: pointer.c  sizes.c
Constructicon/Source/Performance/MatrixMultiply/: Makefile  MatrixMultiply.cc  MatrixMultiply.h  README.md  TestBed.cc  custom_main.c  fasttime.h  matrix_multiply.c  matrix_multiply.h  tbassert.h  testbed.c
Constructicon/Source/UnitTests/: AsBits_tests.cpp  BUILD  CMakeLists.txt
Constructicon/Source/UnitTests/Concurrency/: ThreadPool_tests.cpp
Constructicon/Source/UnitTests/Dependencies/: RapidJson_tests.cpp  json_tests.cpp
Constructicon/Source/UnitTests/TestData/: MarsInsight-20220607.json
Constructicon/Source/UnitTests/Utilities/: AsBits_tests.cpp
Voltron/Source/: CMakeLists.txt  CoderByteChallenges.cpp  Entrevue.cpp  HackerRankPractice.cpp  Main.cpp  README.md
Voltron/Source/Algorithms/: BinarySearch.cpp  BinarySearch.h  BubbleSort.cpp  BubbleSort.h  CMakeLists.txt  InsertionSort.cpp  InsertionSort.h  MergeSort.h  PeakFinding.cpp  PeakFinding.h  Permutations.cpp  Permutations.h  PreEasyExercises.cpp  PreEasyExercises.h  QuickSort.cpp  QuickSort.h  Recursion.cpp  Recursion.h
Voltron/Source/Algorithms/Bits/: BitManipulation.h  Floats.h  Masks.h  OnesComplementSum.cpp  OnesComplementSum.h  PrintBytes.cpp  PrintBytes.h  Shift.h
Voltron/Source/Algorithms/ExpertIo/: Level1.cpp  Level1.h  Level2.cpp  Level2.h  Level3.cpp  Level3.h
Voltron/Source/Algorithms/GarbageCollection/: PoolAllocator.cpp  PoolAllocator.h
Voltron/Source/Algorithms/HackerRank/: BubbleSort.cpp  BubbleSort.h  CountingSort.cpp  CountingSort.h  InsertionSort.cpp  InsertionSort.h  QuickSort.cpp  QuickSort.h
Voltron/Source/Algorithms/LeetCode/: EasyProblems.cpp  EasyProblems.h  HardProblems.cpp  HardProblems.h  MediumProblems.cpp  MediumProblems.h  PrintMatrixSpiral.h
Voltron/Source/Algorithms/PeakFinding/: LoadPeakProblem.cpp  LoadPeakProblem.h
Voltron/Source/Algorithms/Sorting/: InsertionSort.h  KeyIndexedCounting.h  SelectionSort.h
Voltron/Source/Categories/: CMakeLists.txt
Voltron/Source/Categories/AlgebraicDataTypes/: ExpectedValue.h  ProgramStateExamples.h  WordCountingState.h
Voltron/Source/Categories/Functors/: Composition.h  Functor.h
Voltron/Source/Categories/Monads/: ContinuationMonad.h  IOMonad.h  OldStateMonad.h  OptionalMonad.h  ReaderMonad.h  StateMonad.h  StateMonadExamples.cpp  StateMonadExamples.h  WriterMonad.h
Voltron/Source/Cpp/: CMakeLists.txt  CallByValueCallByReference.cpp  CallByValueCallByReference.h  ClassAsEnum.cpp  ClassAsEnum.h  README.md  RuleOf5.cpp  RuleOf5.h
Voltron/Source/Cpp/Classes/: BitField.h  ConstructorsToDestructors.cpp  ConstructorsToDestructors.h  CopyMoveArrays.h
Voltron/Source/Cpp/FileIO/: CStyleFileIO_main.cpp  CppFileIO_main.cpp
Voltron/Source/Cpp/IO/: Streams.h
Voltron/Source/Cpp/Numerics/: BitCast.h
Voltron/Source/Cpp/Std/: MinimalHeaders.h  TypeTraitsProperties.h
Voltron/Source/Cpp/Templates/: FoldExpressions.h  README.md  TypeUtilities.h
Voltron/Source/Cpp/Utilities/: SignalHandler.h  SuperBitSet.h
Voltron/Source/DataStructures/: Alphabet.cpp  Alphabet.h  Arrays.cpp  Arrays.h  Bags.h  BagsImplementations.h  BinarySearchTrees.cpp  BinarySearchTrees.h  BinaryTrees.cpp  BinaryTrees.h  CMakeLists.txt  FreeList.h  HashMap.cpp  HashMap.h  HashSet.cpp  HashSet.h  Iterable.h  LinkedLists.cpp  LinkedLists.h  List.h  Lists.h  Queue.h  Queues.h  QueuesImplementations.h  Stack.h  Stacks.h  StaticFreeList.h  Vector.h
Voltron/Source/DataStructures/Arrays/: Array.h  ArrayQuestions.cpp  ArrayQuestions.h  BaseArray.h  DynamicArray.h  FixedSizeArrays.h  ResizeableArray.h
Voltron/Source/DataStructures/Graphs/: AdjacencyArrayGraph.h  AdjacencyList.cpp  AdjacencyList.h  AdjacentArrayGraph.h  Graph.h  UndirectedAdjacencyList.cpp  UndirectedAdjacencyList.h  WeightedGraph.h
Voltron/Source/DataStructures/HashTables/: HashFunctions.cpp  HashFunctions.h  HashTable.h  hashtable.c
Voltron/Source/DataStructures/LinkedLists/: DoubleNode.h  DoublyLinkedList.h  LinkedList.h  Node.h  ReverseList.h  SentinelDoublyLinkedList.h  SingleList.h  SingleNode.h  (+1 more)
Voltron/Source/DeskCalculator/: Token.cpp  Token.h
Voltron/Source/DigitalInts/: BitWidth.h
Voltron/Source/FileIO/: CMakeLists.txt  FileDescriptor.cpp  FileDescriptor.h  FileFlagsModes.cpp  FileFlagsModes.h  GetFileSize.cpp  GetFileSize.h  OpenFile.cpp  OpenFile.h
Voltron/Source/Hierarchy/: AccessAndInheritance.cpp  AccessAndInheritance.h  CMakeLists.txt  RuleOf5.cpp  RuleOf5.h
Voltron/Source/IO/: CMakeLists.txt
Voltron/Source/IPC/: CMakeLists.txt  GetReadyAddressInfo.cpp  GetReadyAddressInfo.h
Voltron/Source/LowC/: main_reverse_string.c  reverse_string.h  sorber_beginner_c.c  sorber_check_pointers.c  sorber_get_command_line.c
Voltron/Source/Projects/: CMakeLists.txt
Voltron/Source/QuestionsDEntrevue/: CMakeLists.txt  CameraCSIDataParser.cpp  CameraCSIDataParser.h  DaysOld02.cpp  PageFaults.cpp  PageFaults.h  PassionneDordinateurRang.cpp  PassionneDordinateurRang.h  README.md  TirePressureSensor.cpp  TirePressureSensor.h  WarmUpChallenges.cpp
Voltron/Source/Tools/: CMakeLists.txt  CaptureCout.cpp  CaptureCout.h  CaptureStdOut.cpp  CaptureStdOut.h  Filepaths.cpp  Filepaths.h  TemporaryDirectory.cpp  TemporaryDirectory.h  TemporaryFileDescriptor.h
Voltron/Source/UnitTests/: CMakeLists.txt  Main.cpp  MainCommandLineArguments.cpp  MainTClap.cpp  MainUDP-Receiver.cpp  MainUDP-Sender.cpp  README.md  SetupBuildGccDirectoryOnGcc11.sh
Voltron/Source/Utilities/: ArithmeticType.h  BitCast.h  BitSet.h  BitsStream.cpp  BitsStream.h  ByteDifference.h  CMakeLists.txt  Debug.h  EndianConversions.h  FloatingPoint.cpp  FloatingPoint.h  FromAddress.h  HexDump.h  KedykUtilities.cpp  KedykUtilities.h  LazyValuation.h  NarrowCast.h  OnlyOneArgument.h  SplitString.cpp  SplitString.h  ToBytes.h  ToHexString.h
(+967 files in other folders)
