ADD_SUBDIRECTORY(Bits)
ADD_SUBDIRECTORY(PeakFinding)

ADD_LIBRARY(Algorithms
  BinarySearch.cpp
  Bits/OnesComplementSum.cpp
  Bits/PrintBytes.cpp
  HackerRank/BubbleSort.cpp
  HackerRank/InsertionSort.cpp
  HackerRank/QuickSort.cpp
  InsertionSort.cpp
  PeakFinding.cpp
  PeakFinding/LoadPeakProblem.cpp
  Permutations.cpp
  Recursion.cpp
  QuickSort.cpp)