ADD_SUBDIRECTORY(Bits)
ADD_SUBDIRECTORY(PeakFinding)

ADD_LIBRARY(Algorithms
  BinarySearch.cpp
  Bits/OnesComplementSum.cpp
  Bits/PrintBytes.cpp
  ExpertIo/Level1.cpp
  ExpertIo/Level2.cpp
  ExpertIo/Level3.cpp
  GarbageCollection/PoolAllocator.cpp
  HackerRank/BubbleSort.cpp
  HackerRank/CountingSort.cpp
  HackerRank/InsertionSort.cpp
  HackerRank/QuickSort.cpp
  InsertionSort.cpp
  LeetCode/HardProblems.cpp
  LeetCode/MediumProblems.cpp
  PeakFinding.cpp
  PeakFinding/LoadPeakProblem.cpp
  Permutations.cpp
  Recursion.cpp
  Sorting/Strings/MostSignificantDigitFirst.cpp
  QuickSort.cpp)