ADD_LIBRARY(DataStructures
  Alphabet.cpp
  Arrays.cpp
  Arrays/ArrayQuestions.cpp
  BinarySearchTrees.cpp
  BinaryTrees.cpp
  Graphs/AdjacencyList.cpp
  Graphs/UndirectedAdjacencyList.cpp
  HashMap.cpp
  HashSet.cpp
  HashTables/HashFunctions.cpp
  LinkedLists.cpp
  Trees/SuffixTrie.cpp
  )
#  Lists.cpp)