ENABLE_TESTING()

ADD_EXECUTABLE(Check
  CUDAToolkit/MemoryManagement_tests.cu
  CUDAIntroduction/VectorAdd_tests.cu
  )

TARGET_LINK_LIBRARIES(Check
  gtest_main)

INCLUDE(GoogleTest)
gtest_discover_tests(Check)

SET_TARGET_PROPERTIES(Check
  PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

SET_TARGET_PROPERTIES(Check
  PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/")